--- a/BrainfuckInterpret.csproj
+++ b/BrainfuckInterpret.csproj
@@ -44,25 +44,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Interpreter.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Interpreter.Designer.cs">
+      <DependentUpon>Interpreter.cs</DependentUpon>
     </Compile>
-    <Compile Include="inputPrompt.cs">
+    <Compile Include="InputPrompt.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="inputPrompt.Designer.cs">
-      <DependentUpon>inputPrompt.cs</DependentUpon>
+    <Compile Include="InputPrompt.Designer.cs">
+      <DependentUpon>InputPrompt.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Interpreter.resx">
+      <DependentUpon>Interpreter.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="inputPrompt.resx">
-      <DependentUpon>inputPrompt.cs</DependentUpon>
+    <EmbeddedResource Include="InputPrompt.resx">
+      <DependentUpon>InputPrompt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
